--- a/designs-app/src/app/app.component.html
+++ b/designs-app/src/app/app.component.html
@@ -1,8 +1,26 @@
-<div style="width: 100%; height: 20%; background-color: darkgray;">
-  Header
+<div class="header">
+  <div class="title">
+    Header
+  </div>
+  <div class="nav-list">
+    <span>Home</span>
+    <span>Show-all</span>
+    <span>Dashboard</span>
+  </div>
 </div>
-<div>Side panel</div>
-<div>Main content</div>
-<div>Footer</div>
+
+<div style="height: 600px;">
+  <div class="sidenav">
+    <li *ngFor="let item of sidenavList" style="">
+      <span><img src="{{ item.path }}" height="15" width="15" /></span>
+      <span style="padding-bottom: 5px;"> {{ item.name }} </span>
+    </li>
+  </div>
+  <div class="m-container">
+    Main content
+  </div>
+</div>
+
+<div class="footer">Footer</div>
 
 <router-outlet></router-outlet>
