header icon added

--- a/designs-app/src/app/app.component.html
+++ b/designs-app/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="header">
+  <div style="float: left;">
+    <img src="../assets/facebook.svg" alt="facebook" width="150" height="146" />
+  </div>
   <div class="title">
-    Header
+    Social settings
   </div>
   <div class="nav-list">
     <span>Home</span>
