--- a/designs-app/src/app/app.component.html
+++ b/designs-app/src/app/app.component.html
@@ -14,10 +14,10 @@
 
 <div style="height: 600px;">
   <div class="sidenav">
-    <li *ngFor="let item of sidenavList" style="">
+    <div *ngFor="let item of sidenavList" style="padding: 10px;">
       <span><img src="{{ item.path }}" height="15" width="15" /></span>
       <span style="padding-bottom: 5px;"> {{ item.name }} </span>
-    </li>
+    </div>
   </div>
   <div class="m-container">
     Main content
